# pcb_motor

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
docs/: design_guide.md  jlc_design_rules.md  physics.md
examples/camslider140/: README.md  report.html  requirements.yaml
examples/demo_12n14p/: datasheet.md  motor.json  narrative.md  report.html  stator_full_2side.kicad_mod
examples/dualstator140-24n28p/: README.md  datasheet.md  motor.json  report.html  requirements.yaml  stator_full_2side.kicad_mod
examples/dualstator80-36n42p/: README.md  compare.md  datasheet.md  motor.json  narrative.md  report.html  requirements.yaml  stator_full_2side.kicad_mod
examples/dualstator90-12n14p/: motor.json  narrative.md  report.html
examples/gimbal90/: datasheet.md  narrative.md  report.html  stator_routed_2side.kicad_mod  (+2 more)
pcb_motor/: README.md  __init__.py  cli.py  coil_spiral.py  coils.py  constants.py  design.py  evaluate.py  field.py  inertia.py  interfaces.md  iron.py  magnets.py  parasitics.py  report.py  session.py  showcase.css  showcase.js  showcase.py  sweep.py  thermal.py  torque.py  viz.py
tests/: test_board.py  test_board_fabequiv.py  test_cli.py  test_coil_spiral.py  test_coils.py  test_dual_rotor.py  test_evaluate.py  test_field.py  test_gerbers.py  test_iron.py  test_kicad_export.py  test_kicad_footprint.py  test_kicad_project.py  test_kicad_routed.py  test_magnets.py  test_parasitics.py  test_session.py  test_showcase.py  test_sweep.py  test_thermal_inertia.py  test_torque.py  test_viz.py
(+22 files in other folders)
